drag and drop column

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -2,10 +2,14 @@
 .column {
   flex: 0 0 auto;
   width: 300px;
-  height: calc(100% - #{$gap});
-  //margin-left: 10px;
+  height: calc(100vh - 40px - 50px - #{$gap});
+  // height: calc(100% - #{$gap});
   overflow-x: auto;
+  // &:not(:first-child) {
+  //   margin-left: $gap;
+  // }
 
+  margin-left: $gap;
   &::-webkit-scrollbar {
     -webkit-appearance: none;
   }
@@ -37,6 +41,7 @@
     font-weight: bold;
     border-top-left-radius: $column-border-radius;
     border-top-right-radius: $column-border-radius;
+    cursor: pointer;
   }
 
   footer {
@@ -47,10 +52,25 @@
     border-bottom-left-radius: $column-border-radius;
     border-bottom-right-radius: $column-border-radius;
   }
-  ul.card-list {
+  div.card-list {
     list-style-type: none;
     margin: 0;
     max-height: calc(100% - #{$column-header-height}- #{$column-footer-height});
     overflow-y: auto;
+
+    .card-ghost {
+      transition: transform 0.18s ease;
+      transform: rotate(5deg);
+    }
+
+    .card-ghost-drop {
+      transition: transform 0.18s ease-in-out;
+      transform: rotateZ(0deg);
+    }
+    .card-drop-preview {
+      background-color: rgba(150, 150, 200, 0.1);
+      border: 1px dashed #abc;
+      margin: 5px;
+    }
   }
 }
