--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -1,7 +1,7 @@
 @import '../../settings';
 .board-columns {
   display: flex;
-  margin: 0 $gap $gap;
+  margin: 0 $gap $gap 0;
   gap: 10px;
   overflow-x: auto;
 
@@ -18,5 +18,10 @@
     border-right: 5px solid $list-bg-color;
     border-radius: 5px;
     background-clip: padding-box;
+  }
+  .column-drop-preview {
+    background-color: rgba(150, 150, 200, 0.1);
+    border: 1px dashed #abc;
+    margin: 5px 45px 5px 5px;
   }
 }
