--- a/src/App.scss
+++ b/src/App.scss
@@ -19,5 +19,9 @@ body {
   height: 100vh;
   display: grid;
   grid-template-rows: 40px 50px 1fr;
-  line-height: 1.3em;
+  color: $app-main-color;
+  .icon {
+    font-size: 14px;
+    margin-right: 3px;
+  }
 }
