--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -10,7 +10,7 @@
   }
 
   &::-webkit-scrollbar:horizontal {
-    height: 15px;
+    height: 11px;
   }
 
   &::-webkit-scrollbar-thumb {
@@ -23,5 +23,21 @@
     background-color: rgba(150, 150, 200, 0.1);
     border: 1px dashed #abc;
     margin: 5px 45px 5px 5px;
+  }
+  .add-new-column {
+    width: 250px;
+    height: 32px;
+    line-height: 32px;
+    padding: 4px 0 4px 15px;
+    cursor: pointer;
+    color: white;
+    margin-left: $gap;
+    font-size: 15px;
+    background-color: hsla(0, 0, 100, 0.24);
+    border-radius: $card-border-radius;
+
+    &:hover {
+      background-color: hsla(0, 0, 100, 0.34);
+    }
   }
 }
