--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -26,7 +26,7 @@
   }
   .add-new-column {
     width: 250px;
-    height: 32px;
+    // height: 32px;
     line-height: 32px;
     padding: 4px 0 4px 15px;
     cursor: pointer;
@@ -38,6 +38,25 @@
 
     &:hover {
       background-color: hsla(0, 0, 100, 0.34);
+    }
+  }
+  .content-add-column {
+    width: 250px;
+    padding: 5px;
+    margin-left: 10px;
+    background-color: hsla(0, 0, 100, 0.24);
+    border-radius: $card-border-radius;
+
+    .group-btn {
+      display: flex;
+      padding-top: 10px;
+      align-items: center;
+
+      i {
+        font-size: 30px;
+        padding-left: 10px;
+        cursor: pointer;
+      }
     }
   }
 }
