--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -1,9 +1,10 @@
 @import '../../settings';
 .board-columns {
   display: flex;
-  margin: 0 $gap $gap 0;
+  margin: 0 $gap 5px 0;
   gap: 10px;
   overflow-x: auto;
+  overflow-y: hidden;
 
   &::-webkit-scrollbar {
     -webkit-appearance: none;
@@ -33,7 +34,7 @@
     color: white;
     margin-left: $gap;
     font-size: 15px;
-    background-color: hsla(0, 0, 100, 0.24);
+    background-color: fuchsia;
     border-radius: $card-border-radius;
 
     &:hover {
@@ -42,6 +43,7 @@
   }
   .content-add-column {
     width: 250px;
+    height: fit-content;
     padding: 5px;
     margin-left: 10px;
     background-color: hsla(0, 0, 100, 0.24);
@@ -57,6 +59,10 @@
         padding-left: 10px;
         cursor: pointer;
       }
+    }
+
+    .form-control {
+      width: unset !important;
     }
   }
 }
